[package]
name = "beep"
version = "0.2.1"
authors = ["Jack Wrenn <me@jswrenn.com>"]
description = "Beep the PC speaker"
readme = "README.md"
license = "MIT"
repository = "https://github.com/jswrenn/beep"

[dependencies]
libc = "0.2"
lazy_static = "1.0"
dimensioned = "0.6"
num-traits = {version = "0.2.2", default-features = false}
